--- a/05-LY.md
+++ b/05-LY.md
@@ -3,12 +3,12 @@
 
 产品经理以及前端做了一点工作，具体工作是：  
 1.协助前端开发    
-2.绘制系统需求规格说明书文档  
+2.系统需求规格说明书文档  
 3.参与项目需求分析  
 4.整理会议记录  
 
 ## 工作感想
-第一次参与到涉及前后端项目的具体工作中，学习到了小程序的前端开发知识，近距离了解了软件迭代的生命周期，同时在理论课上传授的用例图、活动图、领域建模等有了具体项目的结合理解的更加深入和透彻，让我了解到开放一个软件不仅仅是代码，整个过程认我意识到软件项目中合作和信息的沟通至关重要。。
+第一次参与到涉及前后端项目的具体工作中，学习到了小程序的前端开发知识，近距离了解了软件迭代的生命周期，同时在理论课上传授的用例图、活动图、领域建模等有了具体项目的结合理解的更加深入和透彻，让我了解到开放一个软件不仅仅是代码，整个过程认我意识到软件项目中合作和信息的沟通至关重要。
   
 ## PSP 2.1统计表  
 
@@ -32,11 +32,11 @@
 
 ## 贡献  
 Dashboard贡献记录
-![个人贡献]()  
+![个人贡献](https://github.com/softwarecomprehensiveexperiments/DashBoard/blob/gh-pages/images/con_ly.png)  
   
 前端贡献记录  
-![前]()  
+![前](https://github.com/softwarecomprehensiveexperiments/DashBoard/blob/gh-pages/images/front_ly.png)  
 
 ## 特别致谢
 项目组长16340020--chenjiff：弥补了我前端页面的缺陷，持续引导了项目执行,统筹全局。
-前端成员：感谢大家们对项目的贡献。  
+项目组成员：感谢大家们几个月以来的交流与帮助，受益良多。  
